better quality photo camera(working)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,16 +33,12 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="${applicationId}.provider"
+            android:authorities="com.example.andreea.bookhunt.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths">
-            </meta-data>
-            <meta-data
-                android:name="com.google.android.gms.vision.DEPENDENCIES"
-                android:value="ocr" />
+                android:resource="@xml/file_paths"/>
         </provider>
     </application>
 
