get reviews from goodreads

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation ('com.squareup.retrofit2:converter-simplexml:2.5.0')
+            {
+                exclude group: 'xpp3', module: 'xpp3'
+                exclude group: 'stax', module: 'stax-api'
+                exclude group: 'stax', module: 'stax'
+            }
 }
