--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ResultActivity"></activity>
         <activity android:name=".SearchActivity" />
         <activity
             android:name=".IndexActivity"
