--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".PopupWindowActivity"
+            android:theme="@style/AppTheme.CustomTheme"/>
+        <activity android:name=".ResultActivity" />
         <activity android:name=".SearchActivity" />
         <activity
             android:name=".IndexActivity"
