--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PopupWindowActivity"
-            android:theme="@style/AppTheme.CustomTheme"/>
+        <activity android:name=".ResultsIDreamBooksActivity"></activity>
+        <activity android:name=".OptionsActivity" />
+        <activity
+            android:name=".PopupWindowActivity"
+            android:theme="@style/AppTheme.CustomTheme" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".SearchActivity" />
         <activity
@@ -53,6 +56,10 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
