--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultsIDreamBooksActivity"></activity>
+        <activity android:name=".ReviewActivity"></activity>
+        <activity android:name=".ResultsIDreamBooksActivity" />
         <activity android:name=".OptionsActivity" />
         <activity
             android:name=".PopupWindowActivity"
