added edit profile page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BHResultActivity"></activity>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".BHResultActivity" />
         <activity android:name=".FavouriteActivity" />
         <activity
             android:name=".ReviewActivity"
