--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LastConnectedUsersActivity"></activity>
+        <activity android:name=".LastSearchedBooksActivity"></activity>
+        <activity
+            android:name=".AddGenreActivity"
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity android:name=".GenresActivity" />
+        <activity android:name=".LastConnectedUsersActivity" />
         <activity
             android:name=".AdministratorActivity"
             android:label="@string/title_activity_administrator"
