--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GenresGraphActivity"></activity>
+        <activity android:name=".ViewGenresActivity"
+            android:theme="@style/AppTheme.CustomTheme"></activity>
+        <activity android:name=".GenresGraphActivity" />
         <activity android:name=".LoggingsLastWeekActivity" />
         <activity android:name=".LastSearchedBooksActivity" />
         <activity
